--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
-    
   },
   "repository": {
     "type": "git",
@@ -20,7 +19,7 @@
   },
   "dependencies": {
     "@vimeo/player": "^2.18.0",
-    "lodash": "^4.17.21",
+    "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
     "simplelightbox": "^2.10.3"
   },
